erDiagram
    user ||--|| userStatuses : lookup
    user ||--|| profileStatuses: lookup
    user ||--|{ records : creates
    records ||--|| userStatuses: lookup
    user ||--|| userAuths : authenticates
    
    user ||--|| profile: contains
    userStatistics ||--|| user: contains
    user ||--o{ userAchievements: earns
    user ||--o{ userRsvp: submits
    events ||--o{ userRsvp: receives
    user ||--o{ userConnections: connects
    connectionStatuses ||--|| userConnections: lookup
    profile ||--|| degrees: lookup
    userAchievements ||--|| achievements: lookup

    user ||--o{ bulletin: creates
    bulletin ||--|| contentStatuses: lookup
    bulletin ||--|| bulletinCategories: lookup
    bulletin ||--o{ comments: contains
    user ||--o{ bulletinLikes: toggles
    bulletin ||--o{ bulletinLikes: receives
    user ||--o{ comments: creates
    user ||--o{ commentLikes: toggles
    comments ||--o{ commentLikes: receives
    user ||--o{ donations: creates
    donations ||--|| donationStatuses: lookup
    user ||--o{ events: creates
    events ||--|| eventStatuses: lookup
    events ||--|| eventCategories: lookup
    events ||--|| location: contains
    user ||--o{ notifications: receives
    notifications ||--|| notificationTypes: lookup

    admin ||--o{ bulletin : reviews
    admin ||--o{ events : reviews
    admin ||--o{ records : creates
    admin ||--o{ user : manages 

    %% 1XX - Degree-related
    degrees {
        string id PK
        string degreeName "e.g. BS Mechanical Engineering, BS Civil Engineering, etc."
        string degreeAbbr "e.g. BSME, BSCE, etc."
    }
    %% 2XX - userConnections status
    connectionStatuses {
        string id PK
        string connectionName "e.g. Pending, Accepted, Blocked, etc."
    }
    %% 3XX - Content-related
    contentStatuses {
        string id PK
        string statusName "e.g. Pending, Approved, Rejected"
    }
    bulletinCategories {
        string id PK
        string bulletinCategoryName "e.g. Announcements, Careers, Success Stories, etc."
    }
    eventStatuses {
        string id PK
        string statusName "e.g. Pending, Approved, Rejected, Concluded, Archived, Cancelled"
    }
    %% 4XX - User-related
    %% Content from banned users are automatically hidden from view
    %% Suspended users still maintain content visibility
    %% Suspended users cannot create or edit content, nor can they donate
    %% Ditto for banned users
    %% In all cases, their profile will show their status e.g. [SUSPENDED], [BANNED]
    userStatuses {
        string id PK
        string statusName "e.g. Regular, Official, Banned, etc."
    }
    %% 5XX - Donation-related
    donationStatuses {
        string id PK
        string statusName "e.g. Processing, Completed, Failed"
    }
    %% 6XX - Event-related
    eventCategories {
        string id PK
        string eventCategoryName "e.g. Networking, Sports, Online, etc."
    }
    %% 7XX - Profile status
    profileStatuses {
        string id PK
        string statusName "e.g. Private, Connections Only, Public, etc."
    }
    %% 8XX - Notification-related
    notificationTypes {
        string id PK
        string notificationTypeName "e.g. Connection, Event, etc."
    }

    user {
        string id PK
        string userStatusId FK
        string currentRecordId FK
        string profileStatusId FK
    }
    records {
        string id PK "New record created every time user status changes"
        string userId FK
        string adminId FK
        string userStatusId FK
        datetime dateCreated "Defaults to timestamp of query, immutable"
        string description "Describes the nature of status"
        datetime dateExpires "`NULL` for statuses with no expiry"
    }
    userAuths {
        string userId PK,FK
        string email "Used as login identifier"
        string passwordHash "Hashed password (never store plain text)"
        datetime lastLogin
    }

    userAchievements {
        string id PK
        string userId FK
        string achievementId FK
        int achievementTier
        datetime achievedDate "Defaults to timestamp of acquisition, immutable"
    }
    achievements {
        string id PK
        int achievementCategory "Internal, used for achievement categories"
        int achievementTier
        string achievementTitle
        string achievementDescription
        string achievementIcon
    }
    userConnections {
        string id PK
        string userId FK
        string friendId FK
        string connectionStatusId FK
        datetime dateUpdated
    }
    userRsvp {
        string id PK
        string userId FK
        string eventId FK
        boolean isAttending
        boolean isValid
    }
    userStatistics {
        string userId PK,FK
        int userConnections
        int eventsAttended
        %% Possibly unused, whatever
        int eventsCreated
        int bulletinsCreated
        int commentsWritten
        int achievements
        float donatedAmount
        datetime dateRegistered
    }
    profile {
        string userId PK,FK
        string userName
        string gender
        string bio
        string email
        string phone
        string location
        string currentJob
        string company
        string profileImage
        string degreeId FK
        int batch
        datetime birthday
    }

    admin {
        string id PK
        string username
        string passwordHash "Hashed password (never store plain text)"
        datetime lastLogin
    }

    bulletin {
        string id PK
        string adminId FK
        string authorId FK
        string contentStatusId FK
        string bulletinCategoryId FK
        datetime bulletinDate
        datetime reviewDate "NULL if not reviewed"
        string title
        int readTimeMinutes
        text content
        string bulletinImage
    }
    events {
        string id PK
        string adminId FK
        string authorId FK
        string eventStatusId FK
        string locationId FK
        string eventCategoryId FK
        datetime eventDate
        datetime reviewDate "NULL if not reviewed"
        string title
        text description
        string startTime
        string endTime
        int responses
        string modality
        string eventImage
    }

    location {
        string id PK
        string regionCode
        string province
        string provinceCode
        string cityMunicipality
        string cityCode
        string barangay
        string landmark
        string street
        float lat
        float lng
    }
    comments {
        string id PK
        string userId FK
        string bulletinId FK
        datetime commentDate
        string comment
        int likes
    }
    bulletinLikes {
        string id PK
        string userId FK
        string bulletinId FK
        boolean isLiked
    }
    commentLikes {
        string id PK
        string userId FK
        string commentId FK
        boolean isLiked
    }
    donations {
        string id PK
        string userId FK "NULL if anonymous"
        string donationReference "Reference ID from payment"
        string bankName "Bank or e-wallet used"
        string donationStatusId FK
        datetime donationDate
        float donationAmount
        string donationAmountPhp "Human-readable format"
        boolean donationAnonymous 
        string donationEmail
    }
    notifications {
        string id PK
        string userId FK
        string notificationTypeId FK
        string notificationMessage
        datetime notificationDate
        boolean isRead
    }